  - 'Recent Directories' moved from File to Utilities menu.
  - 'Current Directory' moved from File to Utilities menu.
  - 'Select Line Range' from from Edit to Edit->More Selection.
  - BeanShell evaluation commands moved from Macros to.
    Utilities->BeanShell.
  - Various troubleshooting-related commands moved from Utilities to
    Utilities->Troubleshooting (like they were in 4.1pre1).

+ Miscellaneous Changes:

- The JARClassLoader now registers plugin packages and manifest files.
  (Marco Hunsicker)

- Because a lot of people send me their .jedit/activity.log files
  without invoking 'Update Activity Log on Disk' first, I have added a
  notice to this file, stating that you must invoke the above command
  otherwise the file will be incomplete.

- More tool bar icons added. (Kris Kopicki)

+ Bug Fixes:

- Clicking the 'Open' button or pressing Enter in the 'Open File' dialog
  box did not work; only double-clicking would open files.

- Changing the tab size, indent size or maximum line length settings on
  a global or mode-specific basis should now take effect in all open
  buffers. Previously changes to these settings would only take effect
  in subsequently opened files.

- Under some circumstances the file system browser would case a
  different buffer to be selected in the current view after a directory
  was loaded. It has been confirmed that one jEdit user was admitted
  to a mental asylum because of this bug.

- The file system browser's 'Encoding' menu did not work at all.

- Adding a mode to the user modes directory with the same name as one in
  the system directory would not take effect until jEdit was restarted.

- Abbreviations whose expansions started with the text "<html>" could
  cause problems since Swing automatically tries to display such strings
  as HTML. A workaround has now been added.

* Version 4.1pre2

Thanks to Alexander Maryanovsky and Gerd Knops for contributing to this
release.

+ Editing Changes:
