@@ -20,7 +20,6 @@ and quirks that I need to fix eventually.
 - make vfs listing faster
 - fsb tooltip does not accept mouse clicks
 - minor quicknotepad changes -- update docs
-- right-click on parent directories in fsb
 - add dockable window state change msg
 - rect select and whitespace
 - scroll horizontally when dragging into virtual space
@@ -58,7 +57,6 @@ org.gjt.sp.jedit.gui.PanelWindowContainer.show(PanelWindowContainer.java:200)
   - dockable windows
   - getCenterPoint()
   - popup menus
-- escape in panel window container -> focus back to text area?
 - fix GUIUtilities.java to store maximisation state
 - C+ENTER 1 ...
 - fs browser: scroll to visible after setting divider location
@@ -75,8 +73,6 @@ org.gjt.sp.jedit.gui.PanelWindowContainer.show(PanelWindowContainer.java:200)
 - finish persistent splits code
 - aborts not always fired
 - globalColors setting:
-  - tree controls, file system browser icons, tool bar icons look a bit
-    ugly with different backgrounds
   - help viewer looks ugly
   - selected borders in list, tree, table wrong colors
 - evalutate for selected lines: > 1 selection per line
